--- a/src/book.tex
+++ b/src/book.tex
@@ -438,9 +438,9 @@ boxsep=0pt,left=2pt,right=2pt,top=2pt,bottom=.5pt}
 %\subfile{src/titlescreen}
 %\subfile{src/planets} % draft
 %\subfile{src/main_game} % draft
-%\subfile{src/level_data} % draft
+\subfile{src/level_data} % draft
 \subfile{src/bonusphase} % draft
-\subfile{src/music} % draft
+%\subfile{src/music} % draft
 %\subfile{src/torus} % draft
 %\subfile{src/dna} % wip
 %\subfile{src/mif}
