--- a/src/book.tex
+++ b/src/book.tex
@@ -435,10 +435,10 @@ boxsep=0pt,left=2pt,right=2pt,top=2pt,bottom=.5pt}
 %\subfile{src/binary} %draft
 %\subfile{src/archaeo} %draft
 %\subfile{src/disassembly} %draft
-%\subfile{src/titlescreen}
+\subfile{src/titlescreen}
 %\subfile{src/planets} % draft
 %\subfile{src/main_game} % draft
-\subfile{src/level_data} % draft
+%\subfile{src/level_data} % draft
 \subfile{src/bonusphase} % draft
 %\subfile{src/music} % draft
 %\subfile{src/torus} % draft
