--- a/src/preface.tex
+++ b/src/preface.tex
@@ -1,5 +1,15 @@
 \chapter{Preface} 
-I don't even know what this book is. All I know is that it is incomplete.
+This book describes the inner workings of a relatively obscure video game created
+by an eccentric Englishman in 1985 for the Commodore 64.
 
-Iridis Alpha was a failure. It was also the pinnacle of a certain type of programming.
+If you are curious about old computers such as the C64 or the detailed mechanics
+of making a glorified digital breadboard produce something on a screen that flashes, bleeps,
+and fascinates then this book is hopefully for you.
 
+The version you are reading is little more than a scrapbook still many revisions away from a
+finished product. If you find the writing hard going or the attempts to explain things difficult
+to follow, by all means \href{https://github.com/mwenge/iatheory/issues}{\textcolor{blue}{leave me a note}} and
+I will gratefully accept your complaint. In the meantime, please skip over any infelicities
+to the next pretty picture or promising-looking block of text.
+
+- Rob Hogan \href{https://mastodon.social/@mwenge}{\textcolor{blue}{@mwenge}}
