--- a/src/book.tex
+++ b/src/book.tex
@@ -430,26 +430,26 @@ boxsep=0pt,left=2pt,right=2pt,top=2pt,bottom=.5pt}
 
 \tableofcontents 
 
-%\subfile{src/preface} %draft
-%\subfile{src/bumph} %draft
-%\subfile{src/binary} %draft
-%\subfile{src/archaeo} %draft
-%\subfile{src/disassembly} %draft
+\subfile{src/preface} %draft
+\subfile{src/bumph} %draft
+\subfile{src/binary} %draft
+\subfile{src/archaeo} %draft
+\subfile{src/disassembly} %draft
 \subfile{src/titlescreen}
-%\subfile{src/planets} % draft
-%\subfile{src/main_game} % draft
-%\subfile{src/level_data} % draft
+\subfile{src/planets} % draft
+\subfile{src/main_game} % draft
+\subfile{src/level_data} % draft
 \subfile{src/bonusphase} % draft
-%\subfile{src/music} % draft
-%\subfile{src/torus} % draft
-%\subfile{src/dna} % wip
+\subfile{src/music} % draft
+\subfile{src/torus} % draft
+\subfile{src/dna} % wip
 %\subfile{src/mif}
-%\subfile{src/bugs} %draft
-%\appendix
-%\subfile{src/torus-animation} % draft
-%\subfile{src/level_data_appendix} %draft
-%\subfile{src/planets_appendix} % draft
-%\subfile{src/music_appendix} % draft
+\subfile{src/bugs} %draft
+\appendix
+\subfile{src/torus-animation} % draft
+\subfile{src/level_data_appendix} %draft
+\subfile{src/planets_appendix} % draft
+\subfile{src/music_appendix} % draft
 
 % Obsolete
 %\subfile{src/level_data_appendix_detail} % draft obsolete?
